--- a/Desafio_5/Desafio5_Notebook2.ipynb
+++ b/Desafio_5/Desafio5_Notebook2.ipynb
@@ -10,7 +10,8 @@
         "\n",
         "\n",
         "# Procesamiento de lenguaje natural\n",
-        "## Sentiment analysis con Embeddings + LSTM (Sin Stop Words)"
+        "## Sentiment analysis con Embeddings + LSTM (Sin Stop Words)\n",
+        "### Notebook Nro 2: Sin Stop words"
       ]
     },
     {
@@ -2357,16 +2358,29 @@
       "source": [
         "### Conclusiones\n",
         "\n",
-        "#### En este caso se probó con la misma arquitectura con redes LSTM bidireccionales, pero se removieron las Stop Words. Se probó con Random Oversampling uúnicamente, que fue la técnica que mejor funcionó en la primera Notebook con stop words incluídas. \n",
+        "#### En este caso se probó con la misma arquitectura con redes LSTM bidireccionales, pero se removieron las Stop Words. Se probó con Random Oversampling únicamente, que fue la técnica que mejor funcionó en la primera Notebook con stop words incluídas. \n",
         "\n",
         "#### Resumen de resultados:\n",
         "\n",
         "\n",
         "| Prueba Nro  | Descripción | Loss       | Accuracy    | Observaciones |\n",
         "| :-----------: | :----------- |:-----------:|:-----------:|:-----------:|\n",
-        "| 2.1.        | Con mis propios embeddings y dataset balanceado con random udersampling        | 3.4796 |0.5493| 35 epochs\n",
+        "| 2.1.        | Con mis propios embeddings y dataset balanceado con random udersampling        | 3.4796 |0.5493| 35 epochs \n",
         "| 2.2.        | Con mis propios embeddings y entrenamiento con class_weights | 1.3686 | 0.5273| 20 epochs - se observa overfitting\n",
-        "| 3.1.        | Con embeddings Fasttext (Fasttext) y dataset balanceado con random udersampling        | 3.2066 | 0.4919 | 35 epochs - n\n"
+        "| 3.1.        | Con embeddings Fasttext (Fasttext) y dataset balanceado con random udersampling        | 3.2066 | 0.4919 | 35 epochs - viendo la curva de accuracy se observa que se podría mejorar con más epochs.\n",
+        "\n",
+        "\n",
+        "### Para 2.1 y 3.1 se probó con más epochs (60) en Colab ver (Notebook \"Pruebas_extra.ipynb\"), y se obtuvieron valores de accuracy apenas mejores:\n",
+        "\n",
+        "#### 2.1. con 60 epochs: loss: 4.4938 - accuracy: 0.5668\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Remover las stop words no parece tener un impacto significativo en la performance, de hecho los resultados son un poco mejores en el caso donde se mantuvieron en el dataset. Los embeddings propios funcionan mejor en todos los casos ensayados."
       ]
     }
   ],
