--- a/Desafio_5/Desafio5_Notebook2.ipynb
+++ b/Desafio_5/Desafio5_Notebook2.ipynb
@@ -2370,7 +2370,7 @@
         "| 3.1.        | Con embeddings Fasttext (Fasttext) y dataset balanceado con random udersampling        | 3.2066 | 0.4919 | 35 epochs - viendo la curva de accuracy se observa que se podría mejorar con más epochs.\n",
         "\n",
         "\n",
-        "### Para 2.1 y 3.1 se probó con más epochs (60) en Colab ver (Notebook \"Pruebas_extra.ipynb\"), y se obtuvieron valores de accuracy apenas mejores:\n",
+        "### Para 2.1 se probó con más epochs (60) en Colab ver (Notebook \"Pruebas_extra.ipynb\"), y se obtuvieron valores de accuracy apenas mejores:\n",
         "\n",
         "#### 2.1. con 60 epochs: loss: 4.4938 - accuracy: 0.5668\n",
         "\n"
